Fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -181,12 +181,6 @@ button, .sign-up-box {
     gap: 28%;
 }
 
-.copyright {
-}
-
-.footer-imgs {
-}
-
 .footer-imgs img {
     width: 20%;
     height: auto;
